@@ -2899,6 +2899,295 @@ static char *plugin[] = {
 
 
 /* XPM */
+static char *cd_img[] = {
+/* columns rows colors chars-per-pixel */
+"16 16 131 2",
+"   c #5887B8",
+".  c #A5BFD9",
+"X  c #94BCE7",
+"o  c #96BEE7",
+"O  c #96BCE8",
+"+  c #97BEE9",
+"@  c #97BDEC",
+"#  c #99BFE9",
+"$  c #99BFEB",
+"%  c #AAC3DC",
+"&  c #AAC3DD",
+"*  c #ACC4DD",
+"=  c #97C0E9",
+"-  c #99C0E9",
+";  c #9AC1E9",
+":  c #9BC1E9",
+">  c #9BC1EB",
+",  c #A1C4EA",
+"<  c #A3C7EC",
+"1  c #A0C6EE",
+"2  c #A4C9ED",
+"3  c #A4C9EF",
+"4  c #B9CDE1",
+"5  c #BACEE2",
+"6  c #BBCEE2",
+"7  c #A3C1F0",
+"8  c #A4CAF2",
+"9  c #A5CBF3",
+"0  c #AECAF2",
+"q  c #A9CCF0",
+"w  c #ABCCF0",
+"e  c #ABCDF1",
+"r  c #A8CDF2",
+"t  c #A8CCF3",
+"y  c #A9CDF3",
+"u  c #ABCFF5",
+"i  c #A8CDF6",
+"p  c #A9CEF6",
+"a  c #B2CEF1",
+"s  c #B6CDF7",
+"d  c #ADD2F2",
+"f  c #AED1F4",
+"g  c #ACD0F6",
+"h  c #ACD1F7",
+"j  c #B2D2F2",
+"k  c #B6D2F1",
+"l  c #B2D2F4",
+"z  c #B3D4F6",
+"x  c #B8D6F5",
+"c  c #BBD8F6",
+"v  c #B2D3F9",
+"b  c #B3D5F9",
+"n  c #B2D6FB",
+"m  c #BBDBFC",
+"M  c #BADBFE",
+"N  c #BBDCFC",
+"B  c #C7DAF3",
+"V  c #C6DEF7",
+"C  c #C9DDF3",
+"Z  c #CADEF3",
+"A  c #CCDDF0",
+"S  c #CFDFF1",
+"D  c #C3DDF8",
+"F  c #C4DDF8",
+"G  c #C7DFFB",
+"H  c #D0E0EF",
+"J  c #CEE0F1",
+"K  c #C2E1FF",
+"L  c #C3E1FF",
+"P  c #CAE1FA",
+"I  c #CDE7FF",
+"U  c #CFE7FF",
+"Y  c #C8EDF9",
+"T  c #D1E1F0",
+"R  c #D1E1F1",
+"E  c #D4E2F1",
+"W  c #D3E3F6",
+"Q  c #D2E4F6",
+"!  c #D3E4F6",
+"~  c #D5E4F5",
+"^  c #D4E6F8",
+"/  c #D6E7F9",
+"(  c #D1E5FC",
+")  c #D3E4FF",
+"_  c #D7E9FA",
+"`  c #D1E9FF",
+"'  c #D1EBFF",
+"]  c #D9E8F8",
+"[  c #D9EAF8",
+"{  c #D9EAFA",
+"}  c #DFECF9",
+"|  c #DBE8FF",
+" . c #DAECFE",
+".. c #DAECFF",
+"X. c #D8EFFF",
+"o. c #DAEEFF",
+"O. c #D1F0FD",
+"+. c #DDF0FF",
+"@. c #DDF2FF",
+"#. c #DCF4FF",
+"$. c #E4EDF4",
+"%. c #E1EDFA",
+"&. c #E4F1F8",
+"*. c #E5F3FB",
+"=. c #E4F1FF",
+"-. c #E4F2FE",
+";. c #E2F6FF",
+":. c #E5F4FF",
+">. c #E8F7FF",
+",. c #E9F7FF",
+"<. c #E9F9FF",
+"1. c #EBF8FF",
+"2. c #EDF8FF",
+"3. c #EFFCFF",
+"4. c #F0FAFF",
+"5. c #F0FDFF",
+"6. c #F1FDFF",
+"7. c #F2FCFF",
+"8. c #F3FCFF",
+"9. c #F3FDFF",
+"0. c #F1FEFF",
+"q. c #F3FFFF",
+"w. c #F7FFFF",
+"e. c #F9FEFE",
+"r. c #F9FFFF",
+"t. c #FAFEFE",
+"y. c #FCFDFE",
+"u. c #FDFFFF",
+"i. c #FEFFFF",
+"p. c #FFFFFF",
+"a. c None",
+/* pixels */
+"a.a.a.a.a.            a.a.a.a.a.",
+"a.a.a.    5 E } *.$.5     a.a.a.",
+"a.a.  . p.%.0 f Y w.p.t..   a.a.",
+"a.  . 4.p.8.7 1 O.p.3.8.p.%   a.",
+"a.  %.2  .p.s @ #.w.>.8.w.t.  a.",
+"  5 k > # )  .B &.3.>.8.3.4.5   ",
+"  T , - + a &     & 8.:.o.( T   ",
+"  ~ # - - Z   a.a.  ] j w w !   ",
+"  ~ # + X Z   a.a.  W w 8 2 !   ",
+"  H X X w o.*     & D l z x S   ",
+"  5 V ' ;.+.+.] ^ G u 8 t D 5   ",
+"a.  t.1.O.I K N b g u 8 u ]   a.",
+"a.  . 3.' K M b g u 8 r P .   a.",
+"a.a.  . -.U m v g g c _ .   a.a.",
+"a.a.a.    5 J ^ ^ S 5     a.a.a.",
+"a.a.a.a.a.            a.a.a.a.a."
+};
+
+
+/* XPM */
+static char *arrow_redo[] = {
+/* columns rows colors chars-per-pixel */
+"16 16 110 2",
+"   c #215F1E",
+".  c #236220",
+"X  c #246220",
+"o  c #266522",
+"O  c #276623",
+"+  c #296925",
+"@  c #2A6B26",
+"#  c #2C6C27",
+"$  c #2D6E29",
+"%  c #2F702A",
+"&  c #31732C",
+"*  c #32752D",
+"=  c #34772F",
+"-  c #367930",
+";  c #387B32",
+":  c #397E33",
+">  c #3B8035",
+",  c #3E8337",
+"<  c #3E8438",
+"1  c #3F8538",
+"2  c #41883B",
+"3  c #438A3C",
+"4  c #458D3E",
+"5  c #478F40",
+"6  c #4A9242",
+"7  c #4B9443",
+"8  c #4C9444",
+"9  c #4E9746",
+"0  c #509947",
+"q  c #519C49",
+"w  c #549F4B",
+"e  c #55A04C",
+"r  c #57A34E",
+"t  c #58A34F",
+"y  c #58A44F",
+"u  c #5AA651",
+"i  c #5BA751",
+"p  c #5EAC54",
+"a  c #60A259",
+"s  c #60A35A",
+"d  c #61A35A",
+"f  c #62A35B",
+"g  c #64A65D",
+"h  c #67A85F",
+"j  c #62B057",
+"k  c #62B158",
+"l  c #65B45A",
+"z  c #66B55B",
+"x  c #68B85D",
+"c  c #6ABA5F",
+"v  c #6ABB5F",
+"b  c #6FAF66",
+"n  c #70B268",
+"m  c #71B369",
+"M  c #70B16A",
+"N  c #76B56E",
+"B  c #73B96D",
+"V  c #76B86D",
+"C  c #74BB70",
+"Z  c #75BB70",
+"A  c #77BC71",
+"S  c #7AB972",
+"D  c #78BD72",
+"F  c #79BD74",
+"G  c #7ABD74",
+"H  c #7CBC75",
+"J  c #7FBC76",
+"K  c #7CBE76",
+"L  c #7EBF77",
+"P  c #7DBF78",
+"I  c #7FC178",
+"U  c #80C179",
+"Y  c #84C57A",
+"T  c #85C57B",
+"R  c #82C27C",
+"E  c #85C17E",
+"W  c #87C27F",
+"Q  c #86C47F",
+"!  c #8BC785",
+"~  c #8CC685",
+"^  c #90CA87",
+"/  c #90CA89",
+"(  c #91CA8A",
+")  c #93CB8B",
+"_  c #92CC88",
+"`  c #93CC8A",
+"'  c #94CC8D",
+"]  c #95CC8D",
+"[  c #96CE8D",
+"{  c #98CE90",
+"}  c #99CE90",
+"|  c #99CF91",
+" . c #9ACE91",
+".. c #9ACF92",
+"X. c #9BCF93",
+"o. c #9DD193",
+"O. c #9DD094",
+"+. c #9CD194",
+"@. c #9ED195",
+"#. c #9ED196",
+"$. c #9FD297",
+"%. c #A0D396",
+"&. c #A1D398",
+"*. c #A1D399",
+"=. c #A2D499",
+"-. c #A3D49B",
+";. c #A5D59C",
+":. c #A7D69E",
+">. c #A9D7A0",
+",. c None",
+/* pixels */
+",.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.",
+",.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,.",
+",.,.,.,.,.,.,.,.,.,.,.i w ,.,.,.",
+",.,.,.,.,.x z j p i e m b 8 ,.,.",
+",.,.,.c Y [ *.:.&.&.X.} [ b 1 ,.",
+",.,.c ` >.%.-.*.#.X.} [ / f 1 ,.",
+",.,.Y :.:.} V e q 8 6 g s 1 ,.,.",
+",.z ` o.} y e ,.,.,.,.2 , ,.,.,.",
+",.k #.#.J w ,.,.,.,.,.,.,.,.,.,.",
+",.p [ } S q ,.,.,.,.,.,.,.,.,.,.",
+",.i W ^ ~ 8 5 ,.,.,.,.,.,.,.,.,.",
+",.,.M ) / W u 2 , - - & $ @ ,.,.",
+",.,.8 N ! I Q R U P G A Z O ,.,.",
+",.,.,.5 s M K K K G A C B X ,.,.",
+",.,.,.,.,.: - * % $ + O .   ,.,.",
+",.,.,.,.,.,.,.,.,.,.,.,.,.,.,.,."
+};
+
+
+/* XPM */
 static char *arrow_rotate_clockwise[] = {
 /* columns rows colors chars-per-pixel */
 "16 16 97 2",
@@ -3557,125 +3846,45 @@ static char *database[] = {
 
 
 /* XPM */
-static char *lightning[] = {
+static char *signal_gtkwave[] = {
 /* columns rows colors chars-per-pixel */
-"16 16 99 2",
-"   c #DAA223",
-".  c #DAA323",
-"X  c #DBA424",
-"o  c #DBA524",
-"O  c #DBA625",
-"+  c #DCA726",
-"@  c #DCA927",
-"#  c #DEAB2B",
-"$  c #DEAC29",
-"%  c #DFAE2B",
-"&  c #DFAF2B",
-"*  c #DDA82C",
-"=  c #DEAA2E",
-"-  c #DFAE2D",
-";  c #E0B12C",
-":  c #E0B22D",
-">  c #E1B42E",
-",  c #E2B62F",
-"<  c #EBB62F",
-"1  c #E3B831",
-"2  c #E4BB33",
-"3  c #E5BD35",
-"4  c #E4BB3D",
-"5  c #E6C036",
-"6  c #E7C238",
-"7  c #EEC238",
-"8  c #E8C43A",
-"9  c #E9C73B",
-"0  c #EFC739",
-"q  c #E9C93C",
-"w  c #EACA3D",
-"e  c #EACB3E",
-"r  c #EBCC3F",
-"t  c #F0C83A",
-"y  c #F0C93C",
-"u  c #F0CB3D",
-"i  c #F1CD3F",
-"p  c #F1CE3F",
-"a  c #E3B448",
-"s  c #E4B64A",
-"d  c #E6BA4C",
-"f  c #E7BC4F",
-"g  c #ECBC4A",
-"h  c #E6B951",
-"j  c #E7BD55",
-"k  c #ECCE40",
-"l  c #E7C04A",
-"z  c #ECCD4F",
-"x  c #F0CA40",
-"c  c #F2CE41",
-"v  c #F1CF45",
-"b  c #F2D042",
-"n  c #F3D243",
-"m  c #F3D344",
-"M  c #F3D445",
-"N  c #F4D647",
-"B  c #F3D54A",
-"V  c #F4D848",
-"C  c #EBC756",
-"Z  c #EAC658",
-"A  c #EFD45B",
-"S  c #EDCB62",
-"D  c #F1D964",
-"F  c #F3D56E",
-"G  c #EECC70",
-"H  c #EFC97A",
-"J  c #F0CC7C",
-"K  c #F1CE7E",
-"L  c #F1CF7F",
-"P  c #EFD070",
-"I  c #F2DA75",
-"U  c #F3D77F",
-"Y  c #F7E172",
-"T  c #F1CE80",
-"R  c #F2D283",
-"E  c #F2D384",
-"W  c #F3D786",
-"Q  c #F4D788",
-"!  c #F4D989",
-"~  c #F5DB8A",
-"^  c #F5DB8B",
-"/  c #F5DC8A",
-"(  c #F5DC8C",
-")  c #F6DF8E",
-"_  c #F5E180",
-"`  c #F6E08D",
-"'  c #F8E68E",
-"]  c #F7E291",
-"[  c #F7E391",
-"{  c #F8E693",
-"}  c #F8E594",
-"|  c #F9E993",
-" . c #F9E897",
-".. c #F9E998",
-"X. c #F9EA99",
-"o. c #F9EB99",
-"O. c #FAEB9A",
-"+. c #FAED9A",
-"@. c None",
+"16 16 19 1",
+"  c #070905",
+". c #18270A",
+"X c #243910",
+"o c #325014",
+"O c #3E6617",
+"+ c #45701A",
+"@ c #446822",
+"# c #52861F",
+"$ c #599321",
+"% c #609D24",
+"& c #69AC27",
+"* c #74905A",
+"= c #7DA05B",
+"- c #7C9861",
+"; c #82A65E",
+": c #96BA73",
+"> c #9DC279",
+", c #A2C77D",
+"< c #AAD184",
 /* pixels */
-"@.@.@.@.@.@.@.@.@.@.@.@.@.@.@.@.",
-"@.@.@.k r e q 9 8 6 5 3 2 1 @.@.",
-"@.@.@.r +.o. .} ] ) ^ C 1 @.@.@.",
-"@.@.r D O.V m p t ( S 1 @.@.@.@.",
-"@.@.w | Y M c y / P 4 @.@.@.@.@.",
-"@.@.A X.N b u F U l @.@.@.@.@.@.",
-"@.9 _ ' n i 0 ( Z @.@.@.@.@.@.@.",
-"@.z ..B v x 7 ! > ; % $ @ O . @.",
-"8 I { [ ` / ~ Q E L J H a . @.@.",
-"6 5 3 2 1 , W < g T h *   @.@.@.",
-"@.@.@.@.@.: G R K s o @.@.@.@.@.",
-"@.@.@.@.@.& E j = X @.@.@.@.@.@.",
-"@.@.@.@.& f d + @.@.@.@.@.@.@.@.",
-"@.@.@.@.- # O @.@.@.@.@.@.@.@.@.",
-"@.@.@.$ @ @.@.@.@.@.@.@.@.@.@.@.",
-"@.@.@.@.@.@.@.@.@.@.@.@.@.@.@.@."
+"<::,::<::<>><>><",
+"-.XX..@oo@X XX.-",
+"* .. o&$$&O .. *",
+"*.oX.$+..@#.XX.-",
+"=oooo&OooO&oooo;",
+"* ...#X  X#... *",
+"* . oOX  .Oo.. *",
+"*Xoo$OoXXoO+ooX-",
+"=.oo%oo.Xoo%oo.=",
+"* .o+ X  X +o. *",
+"* .+O X  X O+. *",
+"=oo%+o@Xooo+%oo=",
+"*.o%X.o..o..%o.=",
+"*o&$  X  X  $&o*",
+"-X@o Xo .o. o@X-",
+"<>,,,<<,><<<<<<<"
 };
 
 
@@ -4605,7 +4814,7 @@ GLOBALS->hiericon_package_pixmap=gdk_pixmap_create_from_xpm_d(window->window, &G
 	&style->bg[GTK_STATE_NORMAL], (gchar **)box);
 
 GLOBALS->hiericon_signal_pixmap=gdk_pixmap_create_from_xpm_d(window->window, &GLOBALS->hiericon_signal_mask,
-	&style->bg[GTK_STATE_NORMAL], (gchar **)lightning);
+	&style->bg[GTK_STATE_NORMAL], (gchar **)signal_gtkwave);
 GLOBALS->hiericon_portin_pixmap=gdk_pixmap_create_from_xpm_d(window->window, &GLOBALS->hiericon_portin_mask,
 	&style->bg[GTK_STATE_NORMAL], (gchar **)door_in);
 GLOBALS->hiericon_portout_pixmap=gdk_pixmap_create_from_xpm_d(window->window, &GLOBALS->hiericon_portout_mask,
@@ -4616,6 +4825,13 @@ GLOBALS->hiericon_buffer_pixmap=gdk_pixmap_create_from_xpm_d(window->window, &GL
 	&style->bg[GTK_STATE_NORMAL], (gchar **)icon_extension);
 GLOBALS->hiericon_linkage_pixmap=wave_gdk_pixmap_create_from_xpm_d(window->window, &GLOBALS->hiericon_linkage_mask,
 	&style->bg[GTK_STATE_NORMAL], (gchar **)icon_link);
+
+/* FSDB VHDL (on top of GHW's existing) */
+GLOBALS->hiericon_record_pixmap=gdk_pixmap_create_from_xpm_d(window->window, &GLOBALS->hiericon_record_mask,
+	&style->bg[GTK_STATE_NORMAL], (gchar **)cd_img);
+GLOBALS->hiericon_generate_pixmap=gdk_pixmap_create_from_xpm_d(window->window, &GLOBALS->hiericon_generate_mask,
+	&style->bg[GTK_STATE_NORMAL], (gchar **)arrow_redo);
+
 
 #ifdef WAVE_USE_GTK2
 /* set icon for window manager */
