@@ -1343,3 +1343,8 @@
 		expression adds additional filtering criteria.  Direction
 		filters are case-insensitive.
 		Relax FSDB loader to allow VHDL files.
+		Added TREE_VHDL_ST_ARCHITECTURE, TREE_VHDL_ST_FUNCTION,
+		TREE_VHDL_ST_PROCEDURE, TREE_VHDL_ST_RECORD, 
+		TREE_VHDL_ST_PROCESS, TREE_VHDL_ST_GENERATE hierarchy icons for
+		VHDL (from FSDB).
+
